# Calculadora-de-fisica-UVM

./: Cacluladora.py  calculadoraPR.py  hello_world_tk.py  pyproject.toml
